Small code analysis improvements.